--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <div class="card">
                     <div class="card-content">
                         <span class="card-title grey-text text-darken-4">Player Info</span>
-                        <table class="hoverable">
+                        <table class="hoverable"  id="player-info">
                             <thead>
                                 <tr>
                                     <th>Name</th>
