--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
         <div class="row">
             <div class="col s12 m12">
                 <div class="card">
-                    <div class="card-content">
+                    <div class="card-content" id="player-info">
                         <span class="card-title grey-text text-darken-4">Player Info</span>
-                        <table class="hoverable"  id="player-info">
+                        <span class="grey-text"> (Select Player's)</span>
+                        <table class="hoverable">
                             <thead>
                                 <tr>
                                     <th>Name</th>
@@ -61,7 +62,7 @@
                             </thead>
 
                             <tbody>
-                                <tr ng-repeat="x in players">
+                                <tr ng-repeat="x in players | filter:{selected:true}">
                                     <td>{{x.name}}</td>
                                     <td>{{x.Age}}</td>
                                     <td>{{x.game}}</td>
