--- a/index.html
+++ b/index.html
@@ -14,65 +14,25 @@
                 <div class="col s12">
                     <img src="https://d3gqmx6sr7od7s.cloudfront.net/assets/tech/angularjs-c5eb6e662ed8c08f825ed55723006285.svg" class="logo"></img>
                     <a href="#!" class="brand-logo">Explore Angular</a>
+                    <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="mdi-navigation-menu"></i></a>
+                    <ul class="right hide-on-med-and-down">
+                        <li><a href="#/two-way-binding">Two Way Bindings</a>
+                        </li>
+                        <li><a href="#/templates">Next Feature</a>
+                        </li>
+                    </ul>
+                    <ul class="side-nav" id="mobile-demo">
+                        <li><a href="#/two-way-binding">Two Way Bindings</a>
+                        </li>
+                        <li><a href="#/templates">Next Feature</a>
+                        </li>
+                    </ul>
                 </div>
             </div>
         </nav>
     </header>
     <main>
-        <div class="row">
-            <div class="col s12 m6">
-                <div class="card">
-                    <div id="games" class="card-content">
-                        <span class="card-title grey-text text-darken-4">Games</span>
-                        <div ng-repeat="x in games">
-                            <input id="{{x.name + 'Checkbox'}}" type="checkbox" ng-model="x.selected" ng-change="gameSelected()">
-                            <label for="{{x.name + 'Checkbox'}}">{{x.name}}</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col s12 m6">
-                <div class="card">
-                    <div id="players" class="card-content"><span class="card-title grey-text text-darken-4">Players</span><span class="grey-text"> (Select Games)</span>
-                        <div ng-repeat="x in players">
-                            <input id="{{x.name + 'Checkbox'}}" type="checkbox" ng-model="x.selected">
-                            <label for="{{x.name + 'Checkbox'}}">{{x.name}}</label>
-                        </div>
-                    </div>
-
-                    <div class="card-action">
-                        <a class="waves-effect waves-light btn"><i class="mdi-action-input left"></i>View Player Data</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col s12 m12">
-                <div class="card">
-                    <div class="card-content" id="player-info">
-                        <span class="card-title grey-text text-darken-4">Player Info</span>
-                        <span class="grey-text"> (Select Player's)</span>
-                        <table class="hoverable">
-                            <thead>
-                                <tr>
-                                    <th>Name</th>
-                                    <th>Age</th>
-                                    <th>Game</th>
-                                </tr>
-                            </thead>
-
-                            <tbody>
-                                <tr ng-repeat="x in players | filter:{selected:true}">
-                                    <td>{{x.name}}</td>
-                                    <td>{{x.Age}}</td>
-                                    <td>{{x.game}}</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div ng-view></div>
     </main>
     <footer class="page-footer">
         <div class="footer-copyright">
@@ -85,7 +45,9 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.7.1/angular-material.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.2/js/materialize.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.13/angular-route.min.js"></script>
         <script src="app.js"></script>
+        
     </footer>
 </body>
 
