--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html  ng-app="myApp" xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
     <title></title>
@@ -7,7 +7,7 @@
     <link href="app.css" rel="stylesheet" />
 </head>
 
-<body ng-app="myApp" ng-controller="myCtrl">
+<body ng-controller="myCtrl">
     <header>
         <nav>
             <div class="nav-wrapper">
@@ -32,7 +32,7 @@
         </nav>
     </header>
     <main>
-        <div ng-view></div>
+        <div class="view-slide-in" ng-view></div>
     </main>
     <footer class="page-footer">
         <div class="footer-copyright">
@@ -42,12 +42,12 @@
         </div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.3.13/angular.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.13/angular-route.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.13/angular-animate.min.js"></script>
         <script src="https://ajax.googleapis.com/ajax/libs/angular_material/0.7.1/angular-material.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.95.2/js/materialize.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.2/underscore-min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.3.13/angular-route.min.js"></script>
         <script src="app.js"></script>
-        
     </footer>
 </body>
 
